# tiktok-downloder

./: README.md  index.html
tiktok-downloader/: API.md
tiktok-downloader/backend/: Cargo.toml
tiktok-downloader/backend/src/: main.rs
tiktok-downloader/backend/src/config/: mod.rs
tiktok-downloader/backend/src/handlers/: mod.rs
tiktok-downloader/backend/src/middleware/: mod.rs
tiktok-downloader/backend/src/models/: mod.rs
tiktok-downloader/backend/src/services/: mod.rs  recaptcha_service.rs  tiktok_service.rs
tiktok-downloader/backend/src/utils/: mod.rs  url_validator.rs
