[package]
name = "tiktok-downloader-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1.0"
tempfile = "3.8"
which = "6.0"
zip = "0.6"  # Added for ZIP file creation in profile downloads
tokio-util = { version = "0.7", features = ["io"] }  # Added for async file reading

[dev-dependencies]
tokio-test = "0.4"
